projects/secure-fastapi-devsecops/infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secure-fastapi
  labels:
    name: secure-fastapi
    environment: production
    pod-security.kubernetes.io/enforce: restricted
