projects/secure-fastapi-devsecops/infra/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-fastapi
  namespace: secure-fastapi
  labels:
    app: secure-fastapi
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: secure-fastapi
  template:
    metadata:
      labels:
        app: secure-fastapi
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
      serviceAccountName: secure-fastapi
      containers:
        - name: app
          image: 123456789012.dkr.ecr.us-east-1.amazonaws.com/secure-fastapi:latest
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /api/v1/health/live
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/v1/health/ready
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 15
          startupProbe:
            httpGet:
              path: /api/v1/health/
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 30
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - secure-fastapi
                topologyKey: kubernetes.io/hostname
