projects/secure-fastapi-devsecops/infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-fastapi
  namespace: secure-fastapi
  labels:
    app: secure-fastapi
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-east-1:123456789012:certificate/xxxxx"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
spec:
  type: LoadBalancer
  ports:
    - port: 443
      targetPort: 8000
      protocol: TCP
      name: https
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: secure-fastapi
